--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
+GameDefaultMap=/Game/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/BattleTankGameModeBase_BP.BattleTankGameModeBase_BP_C
 
 [/Script/Engine.UserInterfaceSettings]
@@ -54,5 +54,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
