--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -51,6 +51,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="IntendMoveForward",Key=Gamepad_LeftY,Scale=1.000000)
++AxisMappings=(AxisName="TurnRight",Key=Gamepad_LeftX,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
